--- a/GitDemoProjectArshad/.classpath
+++ b/GitDemoProjectArshad/.classpath
@@ -6,5 +6,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/Admin/Downloads/selenium-server-standalone-3.141.59.jar" sourcepath="D:/selenium-master/selenium-master"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
